# src/controllers/authController.ts
@@ -22,12 +22,39 @@ const registerValidationSchema = Yup.object({
     fullName: Yup.string().required(),
     username: Yup.string().required(),
     email: Yup.string().email().required(),
-    password: Yup.string().required(),
-    confirmPassword: Yup.string().required().oneOf([Yup.ref('password'),""], "Passwords must match"),
+    password: Yup.string()
+    .required()
+    .min(6 , "Password must be at least 6 characters")
+    .test(
+        "at-least-one-uppercase-letter", 
+        "Contains at least one uppercase letter", 
+        (value) => {
+            if(!value) return false;
+            const regex = /^(?=.*[A-Z])/;
+            return regex.test(value);
+        }
+    )
+    .test(
+        "at-least-one-number", 
+        "Contains at least one number", 
+        (value) => {
+            if(!value) return false;
+            const regex = /^(?=.*\d)/;
+            return regex.test(value);
+        }
+    ),
+    confirmPassword: Yup.string()
+        .required()
+        .oneOf([Yup.ref('password'),""], "Passwords must match"),
 });
 
 export default{
     async register(req: Request, res: Response){
+
+        /**
+        #swagger.tags = ['Auth']
+         */
+
         const{
             fullName,
             username,
@@ -69,6 +96,8 @@ export default{
     async login(req: Request, res: Response){
 
         /**
+        #swagger.tags = ['Auth']
+        
         #swagger.requestBody = {
             required: true,
             schema: {
@@ -93,6 +122,7 @@ export default{
                         email: identifier,
                     },
                 ],
+                isActive: true,
             });
 
             if(!userByIdentifier){
@@ -134,6 +164,8 @@ export default{
     async me(req: IReqUser, res: Response){
 
         /**
+        #swagger.tags = ['Auth']
+        
         #swagger.security = [{  
                 "bearerAuth": [] 
             }]
@@ -147,6 +179,44 @@ export default{
                 message: "Success get user profile",
                 data: result,
             })
+
+        } catch (error) {
+            const err = error as unknown as Error;
+            res.status(400).json({
+                message: err.message,
+                data: null,
+            });
+        }
+    },
+
+    async activation(req: Request, res: Response) {
+        /**
+        #swagger.tags = ['Auth']
+        
+        #swagger.requestBody = {
+            required: true,
+                schema: {
+                    $ref: '#/components/schemas/ActivationRequest'
+                }
+            }
+         */
+        try {
+            const { code } = req.body as { code: string };
+
+            const user = await UserModel.findOneAndUpdate({
+                activationCode: code,
+            }, 
+            {
+                isActive: true,
+            },
+            {
+                new: true,
+            }
+        );
+        res.status(200).json({
+            message: "user successfully activated",
+            data: user,
+        });
 
         } catch (error) {
             const err = error as unknown as Error;
